[gd_scene load_steps=3 format=2]

[ext_resource path="res://GUI/GameMenu/GameMenu.gd" type="Script" id=1]
[ext_resource path="res://BigFontTheme.tres" type="Theme" id=2]

[node name="GameMenu" type="Control"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="PopupMenu" type="Popup" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="ColorRect" type="ColorRect" parent="PopupMenu"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.188235, 0.168627, 0.168627, 1 )

[node name="Background" type="TextureRect" parent="PopupMenu"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="CenterContainer" type="CenterContainer" parent="PopupMenu"]
margin_left = 867.0
margin_top = 599.5
margin_right = 1053.0
margin_bottom = 753.5

[node name="Label" type="Label" parent="PopupMenu/CenterContainer"]
margin_left = 74.0
margin_top = 149.0
margin_right = 112.0
margin_bottom = 163.0
text = "Pause"
align = 1
valign = 1

[node name="ButtonContainer" type="VBoxContainer" parent="PopupMenu/CenterContainer"]
margin_right = 185.0
margin_bottom = 312.0
theme = ExtResource( 2 )
custom_constants/separation = 8

[node name="SaveGameButton" type="Button" parent="PopupMenu/CenterContainer/ButtonContainer"]
margin_right = 185.0
margin_bottom = 56.0
focus_neighbour_top = NodePath("../CloseButton")
text = "Save Game"

[node name="LoadGameButton" type="Button" parent="PopupMenu/CenterContainer/ButtonContainer"]
margin_top = 64.0
margin_right = 185.0
margin_bottom = 120.0
text = "Load"

[node name="SettingsButton" type="Button" parent="PopupMenu/CenterContainer/ButtonContainer"]
margin_top = 128.0
margin_right = 185.0
margin_bottom = 184.0
text = "Settings"

[node name="QuitButton" type="Button" parent="PopupMenu/CenterContainer/ButtonContainer"]
margin_top = 192.0
margin_right = 185.0
margin_bottom = 248.0
text = "Quit"

[node name="CloseButton" type="Button" parent="PopupMenu/CenterContainer/ButtonContainer"]
margin_top = 256.0
margin_right = 185.0
margin_bottom = 312.0
focus_neighbour_bottom = NodePath("../SaveGameButton")
text = "Close"

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]

[connection signal="pressed" from="PopupMenu/CenterContainer/ButtonContainer/SaveGameButton" to="." method="save_game"]
[connection signal="pressed" from="PopupMenu/CenterContainer/ButtonContainer/LoadGameButton" to="." method="load_game"]
[connection signal="pressed" from="PopupMenu/CenterContainer/ButtonContainer/SettingsButton" to="." method="open_setting"]
[connection signal="pressed" from="PopupMenu/CenterContainer/ButtonContainer/QuitButton" to="." method="quite_game"]
[connection signal="pressed" from="PopupMenu/CenterContainer/ButtonContainer/CloseButton" to="." method="close_game"]
